# keycloak-auditing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  aws_pentest_installer.sh  keycloak-auditor.py  keycloak-directories.txt  keycloak-security-template.yaml  keycloak-subdomains.txt  pyproject.toml  requirements.txt  verify_fix.py
audit-output/: audit.json  enumeration.json  nuclei.json  report.json  report.md  targets.txt
docs/: _config.yml  index.md  plugins.md  reference.md  tutorial.md
keycloak_auditor/: __init__.py  cli.py
keycloak_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
keycloak_auditor/audit/: checks.py
keycloak_auditor/baseline/: manager.py
keycloak_auditor/compliance/: mappings.py  reporter.py
keycloak_auditor/core/: config.py  http.py
nuclei-templates/: keycloak-admin-console.yaml  keycloak-authentication-bypass.yaml  keycloak-client-secrets.yaml  keycloak-configuration-exposure.yaml  keycloak-cookie-flags.yaml  keycloak-cors-misconfig.yaml  keycloak-jwt-vulnerabilities.yaml  keycloak-ldap-injection.yaml  keycloak-management-interface.yaml  keycloak-privilege-escalation.yaml  keycloak-realm-enumeration.yaml  keycloak-saml-vulnerabilities.yaml  keycloak-security-workflow.yaml  keycloak-user-enumeration.yaml  keycloak-version-detection.yaml  keycloak-weak-redirect.yaml
plugins/: example_audit.py  example_enumeration.py
tests/: test_cli_smoke.py
wordlists/: keycloak-admin-api.txt  keycloak-directories.txt  keycloak-security-template.yaml  keycloak-subdomains.txt
(+9 files in other folders)
