[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-auditor"
version = "0.1.0"
description = "Modular Keycloak security auditing framework with Nuclei integration"
authors = [{name = "Security Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"requests>=2.32.3",
	"click>=8.1.7",
	"rich>=13.7.1",
	"pydantic>=2.8.2",
	"jinja2>=3.1.4",
]

[project.scripts]
keycloak-auditor = "keycloak_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["keycloak_auditor*"]
exclude = ["tests*"]
